Fixed z-index on overlay

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,7 @@ button {
   background-color: #76CE82;
   transition: .4s;
   transform: scale(1.05);
+  z-index: -1;
 }
 
 
@@ -135,6 +136,7 @@ button {
   left: 0;
   right: 0;
   border-radius: 5px;
+  z-index: 1;
 }
 
 .title {
